Upload dau tien

--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Grand FasrFood&Drink</title>
+	<link rel="stylesheet" href="official.css">
+	<link rel="stylesheet" href="bootstrap-4.5.2-dist/css/bootstrap.css">
+	<title>Document</title>
 </head>
 <body>
-	<h1>Design By Dương Kiên</h1>
+	<div class="banner">
+		<div class="row">
+			<a href="http://localhost:8888/02/">
+			<div class="sanpham">
+				<img src="dauan.jpg" alt="">
+			</div></a>
+			<a href="">
+			<div class="sanpham">
+				<img src="gao.jpg" alt="">
+			</div></a>
+			<a href="">
+			<div class="sanpham">
+				<img src="haisan.jpg" alt="">
+			</div></a>
+			<a href="">
+			<div class="sanpham">
+				<img src="rau.jpg" alt="">
+			</div></a>
+		</div>
+	</div>
 </body>
 </html>
