--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="official.css">
 	<link rel="stylesheet" href="bootstrap-4.5.2-dist/css/bootstrap.css">
-	<title>Document</title>
+	<title>Grand FastFood&Drink</title>
 </head>
 <body>
 	<div class="banner">
