--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="official.css">
 	<link rel="stylesheet" href="bootstrap-4.5.2-dist/css/bootstrap.css">
 	<title>Grand FastFood&Drink</title>
-	<link rel="shortcut icon" href="/logo.png" />
+	<link rel="shortcut icon" href="/logo.ico" />
 </head>
 <body>
 	<div class="banner">
