--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="official.css">
 	<link rel="stylesheet" href="bootstrap-4.5.2-dist/css/bootstrap.css">
+	<img src="logo.ico" alt="">
 	<title>Grand FastFood&Drink</title>
-	<link rel="shortcut icon" href="/logo.ico" />
+	<img src="logo.ico" alt="">
 </head>
 <body>
 	<div class="banner">
